# boxer

./: .gitignore  .golangci.yml  AGENTS.md  CODINGSTANDARDS.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  boxer.sh  egui2gen.sh  generate.sh  go.mod  go.sum  tags
.claude/: skills
.github/: dependabot.yml
.github/workflows/: codeql.yaml  codestat.yaml  licenses.yaml  lint.yaml  scorecard.yaml  test.yaml  vuln.yaml
apps/adhocdemo/: adhocdemo.go  adhocdemo_test.go  app_register.go
apps/adrboard/: adrboard.go  adrboard_env.go  app_register.go  board.go  board_test.go  package_props.go
apps/capdemo/: app_register.go  capdemo.go  capdemo_test.go  package_props.go
apps/capinspector/: active_backends.go  app_register.go  archgraph.go  audit_counters.go  audit_counters_test.go  audit_sparkline.go  audit_sparkline_test.go  capinspector.go  capinspector_test.go  capinspector_tour.go  caps.go  package_props.go
apps/fibscope/: app_register.go  fibscope.go  fibscope_test.go  fibscope_tour.go  package_props.go
apps/godepview/: app_register.go  doc.go  godepview.go  godepview_env.go  godepview_env_test.go  godepview_graph_layered.go  godepview_graph_layered_test.go  godepview_groups.go  godepview_modules.go  godepview_tour.go  godepview_view.go  godepview_wasmcol.go  package_props.go
apps/imzrt/: app_register.go  imzrt.go  imzrt_format.go  imzrt_histogram.go  imzrt_histogram_test.go  imzrt_panel_gc.go  imzrt_panel_heap.go  imzrt_panel_sched.go  imzrt_panel_topbar.go  imzrt_sampler.go  imzrt_sampler_heap_test.go  imzrt_slidingwindow.go  imzrt_theme.go  imzrt_tour.go  package_props.go
apps/imztop/: app_register.go  doc.go  imztop.go  imztop_app_test.go  imztop_cpu_heatmap.go  imztop_layout.go  imztop_panel_battery.go  imztop_panel_cpu.go  imztop_panel_disk.go  imztop_panel_gpu.go  imztop_panel_mem.go  imztop_panel_net.go  imztop_panel_pressure.go  imztop_panel_proc.go  imztop_panel_procmap.go  imztop_panel_sensors.go  imztop_panel_topbar.go  imztop_panel_topology.go  imztop_procmap_tree.go  imztop_procmap_tree_test.go  imztop_proctree_test.go  imztop_rate_plot.go  imztop_sampler.go  imztop_sampler_bisection_test.go  imztop_sampler_ewma_test.go  imztop_sampler_gpu_other.go  imztop_sampler_gpu_rocm.go  imztop_sampler_heap_test.go  imztop_sampler_keyed.go  imztop_sampler_nats_test.go  imztop_slidingwindow.go  imztop_slidingwindow_test.go  imztop_theme.go  imztop_timeticks.go  imztop_topology_tree.go  imztop_tour.go  imztop_tour_synth.go  imztop_ytalbot.go  package_props.go
apps/play/: anchor_render_test.go  app_register.go  help_corpus_test.go  package_props.go  play_affordance.go  play_affordance_test.go  play_applet_chrome_test.go  play_bindings.go  play_bindings_test.go  play_caps_test.go  play_card_driver.go  play_cli.go  play_client.go  play_client_live_test.go  play_client_test.go  play_concat.go  play_concat_test.go  play_conditions_test.go  play_datasets.go  play_datasets_test.go  play_delivery.go  play_delivery_test.go  play_detail.go  play_detail_panel.go  play_detail_panel_test.go  play_detail_rich.go  play_detail_rich_test.go  play_detail_timeline.go  (+97 more)
doc/: .gitignore  DOCUMENTATION_STANDARD.md  ENGINEERING_PRACTICES.md  env-vars.md  naming.md
rust/h3bridge/: Cargo.toml  rust-toolchain.toml
rust/h3bridge/src/: lib.rs
rust/imzero2/: .gitignore  Cargo.toml  EXPLANATION.md  README.md  build.rs  build_go.sh  build_rust.sh  build_rust_headless.sh  build_rust_headless_mesh.sh  build_rust_headless_svg.sh  hmi-fonts-pragmatapro.sh  hmi.sh  hmi_headless.sh  profile.sh  rust-toolchain  rustfmt.toml
rust/imzero2/assets/colors/: pairs.toml  palette.toml
rust/imzero2/assets/colors/scientific/upstream/: SHA256SUMS
rust/imzero2/assets/fonts/ids-mono/: BUILD.md  LICENSE  SHA256SUMS
rust/imzero2/assets/fonts/iosevka-aile/: LICENSE  SHA256SUMS
rust/imzero2/assets/fonts/phosphor/: BUILD.md  SHA256SUMS
rust/imzero2/deploy/: .gitignore  Caddyfile  DEPLOY.md  Dockerfile  build.sh  demo.env.example  docker-compose.yml  entrypoint.sh
rust/imzero2/deploy/onbox/: ONBOX.md  VALIDATION.md  imzero2-demo.service  imzero2-deploy.service  run-current.sh  validate.sh
rust/imzero2/examples/: text_to_svg.rs  window_content_only.rs
rust/imzero2/imzero2_egui/: Cargo.toml
rust/imzero2/imzero2_egui/src/: lib.rs
rust/imzero2/imzero2_egui/src/style/: mod.rs
rust/imzero2/imzero2_egui/src/style/data_encoding/: batlow.rs  batlow_k.rs  batlow_s.rs  broc.rs  cork.rs  gray_c.rs  inferno.rs  lajolla.rs  lapaz.rs  magma.rs  mod.rs  oslo.rs  plasma.rs  roma.rs  vik.rs  viridis.rs
rust/imzero2/imzero2_egui/src/style/tokens/: branding.rs  density.rs  mod.rs  motion.rs  oklab.rs  palette_generated.rs  rounding.rs  spacing.rs  stroke.rs  typography.rs  visuals.rs
rust/imzero2/scripts/: install_puffin_deps.sh
rust/imzero2/src/: lib.rs  main.rs  runinfo.rs
rust/imzero2/src/cli/: flags.rs
rust/imzero2/src/fffi/: common.rs  io.rs  mod.rs
rust/imzero2/src/imzero2/: app.rs  appconfig.rs  apphost.rs  code_view.rs  codeclane.rs  date_picker_button.rs  datetime_picker.rs  debugtools.rs  encoderpipe.rs  entry.rs  enums_out.rs  fenums.rs  framesink.rs  headless.rs  headless_svg.rs  image.rs  inputmap.rs  inputproto.rs  interpreter.rs  meshlane.rs  mod.rs  nutreader.rs  scrolling_texture.rs  svgexport.rs  text_edit_highlight.rs  time_range_picker.rs  wscarrier.rs
rust/imzero2/src/imzero2/viewer/: index.html
rust/imzero2/src/ipc/: ipc06.rs  ipc06testharness.rs  mod.rs
rust/watermark/: Cargo.toml  DESIGN.md  EXPLANATION.md  README.md  rust-toolchain.toml
rust/watermark/src/: calibrate.rs  cli.rs  codec.rs  decode.rs  fec.rs  frame.rs  layout.rs  lib.rs  locate.rs  main.rs  payload.rs  render.rs  sample.rs
rust/watermark/tests/: s11_robustness.rs  s1_payload.rs  s2_fec.rs  s3_layout.rs  s5_roundtrip_clean.rs  s6_noise.rs  s7_locate.rs  s8_codec.rs  s9_crop.rs
scripts/: betteralign.sh  goimports.sh  golangci-lint.sh  gotest.sh  gotestsum.sh  install.sh  new-doc.sh  updatedeps.sh
showcase/: DEPLOY.md  EXPLANATION.md  README.md  build.sh  demo.env.example
(+4268 files in other folders)
