[package]
name = "h3bridge"
version = "0.1.0"
edition = "2021"
publish = false
description = "Rust→WASM bridge exposing Uber H3 (via h3o) to Go through wazero."
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "emit_golden"
path = "src/bin/emit_golden.rs"
required-features = []

[dependencies]
h3o = { version = "0.9.4", features = ["geo"] }
geo-types = { version = "0.7", default-features = false }

# h3o[geo] pulls geo → rand → getrandom. On wasm32-unknown-unknown, getrandom
# has no OS entropy source, so we must register a custom one. We only need
# this to satisfy ahash's seeding — polyfill/tiling outputs are deterministic
# once the hash seed is fixed, which is what we want for byte-reproducible
# builds.
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
