[workspace]
members = [".", "imzero2_egui"]
resolver = "2"

[package]
name = "imzero2"
version = "0.1.0"
authors = ["Panos Stergiotis <p@stergiotis.ch>"]
edition = "2024"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.92"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "imzero2_ws_probe"
path = "src/bin/ws_probe.rs"
required-features = ["headless"]

[features]
# ADR-0024 SD1: two binary targets, one source tree. `desktop` (default)
# keeps the eframe + winit host for hmi.sh; `headless` selects the
# render-to-texture host (hand-rolled egui::Context + egui_wgpu loop, no
# window system) that feeds the remote-access pixel pipeline. The FFFI2
# interpreter body is shared verbatim between the two hosts.
default = ["desktop"]
# egui-wgpu is pulled in transitively by eframe under `desktop`; declare it on
# the feature too so `entry.rs` can name `egui_wgpu::wgpu::PresentMode` when
# mapping the `-vsync` flag onto the wgpu swapchain (eframe 0.35 dropped the
# `NativeOptions::vsync` field). headless already enables it; headless_svg does
# not, keeping that host GPU-less.
desktop = ["dep:eframe", "dep:egui-wgpu"]
headless = [
    "dep:wgpu",
    "dep:egui-wgpu",
    "dep:pollster",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:prost",
    "dep:futures-util",
]
# GPU-less, SVG-only host (headless_svg.rs). Drives the shared FFFI2
# interpreter with `ctx.run_ui` and lets the always-registered SVG-export
# plugin (apphost::init_common) write files on ExportSvg / ExportSvgWindow.
# No wgpu/winit/ffmpeg — SVG export reads egui's pre-tessellation shapes, so
# no GPU device is needed. Adds no dependencies (egui + svgexport are core).
# Intended client binary for serving imzero2 views as SVG over HTTP.
headless_svg = []
puffin = ["dep:puffin", "dep:puffin_http", "profiling/profile-with-puffin"]
dhat-heap = ["dep:dhat"]
wayland = ["eframe?/wayland"]
x11 = ["eframe?/x11"]

[dependencies]
egui = ">=0.35.0"
eframe = { version = ">=0.35.0", optional = true, default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed trust-analyzer.cargo.featureshe default egui fonts.
    "wgpu",          # Use the wgpu rendering backend. Alternative: "glow".
    #"persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
# Headless host (ADR-0024 SD2): drives egui_wgpu::Renderer directly against
# an offscreen texture; wgpu with default features so the native backends
# (vulkan/gles) are present even when eframe is compiled out.
wgpu = { version = "29.0.1", optional = true }
egui-wgpu = { version = "0.35.0", optional = true }
pollster = { version = "0.4", optional = true }
# ADR-0024 SD4/SD6/SD7: WebSocket carrier + protobuf wire. The proto
# contract lives at proto/boxer/imzero2/v1/input.proto; inputproto.rs
# mirrors it with hand-tagged prost derives until protoc-based codegen
# lands.
tokio = { version = "1", optional = true, default-features = false, features = ["rt", "net", "sync", "time", "io-util", "macros"] }
tokio-tungstenite = { version = "0.27", optional = true }
prost = { version = "0.14", optional = true }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["sink", "std"] }
log = "0.4.27"
binary_rw = "4.1.0"
thiserror = "2.0.17"
strum = { version = "0.27", features = ["derive"] }
bitflags = "2.9.4"
egui_ltreeview = "0.8.0"
roaring = "0.11.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
byteorder = "1.5.0"
puffin_http = {version = "0.16.1", optional = true }
puffin = {version = "0.19.1", optional = true }
profiling = "1.0.17"
mimalloc = "0.1.48"
dhat = { version = "0.3.3", optional = true }
puffin_egui = "0.30.0"
memmap2 = "0.9.9"
rand = "0.9.2"
blake3 = "1.8.2"
egui_extras = { version = "0.35.0", features = ["default", "datepicker", "serde"] }
jiff = { version = "0.2", default-features = false, features = ["std"] }
egui_table = "0.9.0"
egui_plot = "0.36"
egui_dock = "0.20"
egui_graphs = { version = "0.31", features = ["events"] }
petgraph = { version = "0.8", default-features = false, features = ["stable_graph"] }
png = "0.17"
walkers = "0.56"
# Used by imzero2::svgexport to read the TTF `name` table at font-load time,
# so SVG export can emit the real family name (e.g. "Noto Sans") instead of
# the generic CSS keyword. Transitively present via ab_glyph; declared
# directly so we don't depend on the transitive version staying stable.
ttf-parser = "0.25"
# Tier-2 SVG export: subset the loaded TTFs to just the glyphs that appear
# in a given frame, embed as base64 @font-face for self-contained pixel-
# perfect rendering. `subsetter` is Typst's pure-Rust subsetter.
subsetter = "0.2"
base64 = "0.22"
h3o = { version = "0.9", features = ["geo"] }
egui-snarl = "0.11.0"

env_logger = "0.11.8"

# IDS token layer (ADR-0029). Per-app-startup egui::Style overlay; no widgets.
imzero2_egui = { path = "imzero2_egui" }

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "main" }
# eframe = { git = "https://github.com/emilk/egui", branch = "main" }

# If you fork https://github.com/emilk/egui you can test with:
#egui = { path = "../contrib/egui/crates/egui" }
#eframe = { path = "../contrib/egui/crates/eframe" }


# ----------------------------------------------------------------------------------------
# Lints:

[build-dependencies]
# ADR-0024 SD7: generate the wire types from the .proto at build time
# (pure Rust, no system protoc). Only active under the `headless` feature
# — see build.rs.
protox = "0.9"
prost-build = "0.14"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "deny"

elided_lifetimes_in_paths = "warn"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
unused_extern_crates = "warn"
unused_import_braces = "warn"
#unused_lifetimes = "warn"

trivial_casts = "allow"
unused_qualifications = "allow"


[workspace.lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"


[workspace.lints.clippy]
allow_attributes = "warn"
as_ptr_cast_mut = "warn"
await_holding_lock = "warn"
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
default_union_representation = "warn"
derive_partial_eq_without_eq = "warn"
disallowed_macros = "warn"                   # See clippy.toml
disallowed_methods = "warn"                  # See clippy.toml
disallowed_names = "warn"                    # See clippy.toml
disallowed_script_idents = "warn"            # See clippy.toml
disallowed_types = "warn"                    # See clippy.toml
doc_comment_double_space_linebreaks = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
elidable_lifetime_names = "warn"
empty_enum = "warn"
empty_enum_variants_with_brackets = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
fn_to_numeric_cast_any = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
if_let_mutex = "warn"
ignore_without_reason = "warn"
implicit_clone = "warn"
implied_bounds_in_impls = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
indexing_slicing = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_over_hash_type = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
let_unit_value = "warn"
linkedlist = "warn"
literal_string_with_formatting_args = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
match_bool = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
missing_assert_message = "warn"
missing_enforced_import_renames = "warn"
missing_errors_doc = "warn"
missing_safety_doc = "warn"
mixed_attributes_style = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
negative_feature_names = "warn"
non_std_lazy_statics = "warn"
non_zero_suggestions = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
pub_underscore_fields = "warn"
pub_without_shorthand = "warn"
rc_mutex = "warn"
readonly_write_lock = "warn"
redundant_type_annotations = "warn"
ref_as_ptr = "warn"
ref_option_ref = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
set_contains_or_insert = "warn"
should_panic_without_expect = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
single_option_map = "warn"
str_split_at_newline = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
suspicious_command_arg_space = "warn"
suspicious_xor_used_as_pow = "warn"
todo = "warn"
too_long_first_doc_paragraph = "warn"
too_many_lines = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_ptr_to_ptr = "warn"
tuple_array_conversions = "warn"
unchecked_duration_subtraction = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
uninhabited_references = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_literal_bound = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_semicolon = "warn"
unnecessary_struct_initialization = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
unused_self = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"

manual_range_contains = "allow" # this is better on 'allow'
map_unwrap_or = "allow"         # this is better on 'allow'
